# ibson

./: README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
benchmarking/: benchmark.py
ibson/: __init__.py  codec_util.py  decoder.py  encoder.py  errors.py  test.bson  test.py  types.py
ibson/tool/: bsonq.py
ibsontests/: __init__.py  main.py
ibsontests/modules/: primary_tests.py  stress_tests.py
src/ibson/: decoder.py  encoder.py  types.py
src/ibson/tests/: primary_tests.py
tests/: decoder_tests.py  encoder_tests.py  primary_test.py  stress_test.py
