[metadata]
name = ibson
author = eulersIDcrisis
author_email = eulersidcrisis@yahoo.com
description = Server to host FM Radio via RTL-SDR utilities.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eulersIDcrisis/ibson
project_urls =
    Bug Tracker = https://github.com/eulersIDcrisis/ibson/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers

[options]
package_dir =
    = ibson
packages = find:
python_requires = >=3.7

[options.packages.find]
where = ibson