[metadata]
name = ibson
version = 0.0.1
author = Aaron Gibson
author_email = eulersidcrisis@yahoo.com
description = BSON parsing library and tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eulersIDcrisis/ibson
project_urls =
    Bug Tracker = https://github.com/eulersIDcrisis/ibson/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers

[options]
package_dir =
    = ibson
packages = find:
python_requires = >=3.3

[options.packages.find]
where = ibson